# dploy

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  dploy.toml
.github/workflows/: release.yml
examples/simple-web/: .dockerignore  Dockerfile  Dockerfile.dev  dploy.toml  index.js  package-lock.json  package.json
examples/simple-web/src/: index.js
src/: build.rs  cli.rs  config.rs  constants.rs  context.rs  deploy.rs  docker.rs  main.rs  network.rs  prelude.rs  presentation.rs  ssh.rs
src/commands/: deploy.rs  exec.rs  logs.rs  mod.rs  stop.rs
src/services/: app.rs  mod.rs  postgres.rs  proxy.rs
src/utils/: file.rs  mod.rs  network.rs  string.rs
website/: .gitignore  package-lock.json  package.json
website/.vitepress/: config.mts
website/public/: install.sh
website/src/: difference-between-modes.md  getting-started.md  important-considerations.md  index.md
