[package]
name = "dploy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bollard = { version = "0.16.1", features = ["ssl", "chrono"] }
clap = { version = "4.5.7", features = ["derive"] }
console = "0.15.8"
dotenvy = "0.15.7"
flate2 = "1.0.30"
futures-util = "0.3.30"
ignore = "0.4.22"
openssh = { version = "0.10.4", features = ["native-mux"] }
serde = { version = "1.0.203", features = ["derive"] }
tar = "0.4.41"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
toml = "0.8.14"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
